# rust-sample

./: .dockerignore  .env.example  .env.production  .env.testing  Cargo.toml  README.md  compose.yml
docker/local/db/: Dockerfile
docker/local/db/init/: init.sql
docker/local/rust/: Dockerfile
docker/prod/: Dockerfile
migration/: Cargo.toml
migration/src/: lib.rs  m20250514_045755_create_table_users.rs
src/: main.rs  script_openapi.rs
src/api/: mod.rs  router.rs
src/api/configs/: config.rs
src/api/contexts/: context.rs
src/api/databases/: database.rs
src/api/entities/: mod.rs  prelude.rs  users.rs
src/api/errors/: error.rs
src/api/handlers/sample/: mod.rs  sample_handler.rs  sample_handler_1_test.rs
src/api/handlers/users/: mod.rs  users_handler.rs  users_handler_1_test.rs  users_handler_2_test.rs  users_handler_3_test.rs  users_handler_4_test.rs  users_handler_5_test.rs
src/api/logger/: env_logger.rs  mod.rs
src/api/middleware/: common_middleware.rs  mod.rs
src/api/openapi/: openapi.json
src/api/repositories/sample/: mod.rs  sample_repository.rs
src/api/repositories/users/: users_repository.rs
src/api/services/: mod.rs
src/api/services/sample/: mod.rs  sample_service.rs
src/api/services/users/: users_service.rs
src/api/usecases/sample/: mod.rs  sample_get_path_query_usecase.rs  sample_get_usecase.rs  sample_post_usecase.rs  sample_usecase.rs
src/api/usecases/users/: create_user_usecase.rs  delete_user_usecase.rs  get_user_from_uid_usecase.rs  get_users_usecase.rs  mod.rs  update_user_usecase.rs
