[package]
name = "rust_api"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.88"
axum = "0.8.3"
chrono = "0.4.40"
env_logger = "0.11.8"
envy = "0.4.2"
log = "0.4.27"
mockall = "0.13.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
uuid = { version = "1.16.0", features = ["v4"] }

